2008-01-15 Joerg Faschingbauer <joerg.faschingbauer@aon.at>

	* Merged from
	  https://confix.svn.sourceforge.net/svnroot/confix/confix/branches/RB-2.1,
	  rev 447:
	  * InstalledNode.short_description() was left abstract; fixed.
	  * add test libconfix/core/filesys/tests/scan.py
	  * small restructuring in plugins.c.linked (deep vs flat linking)
	* index.html
	  * converted to validated XHTML (hooray)
	  * content fixed to give potential users a chance to understand
	    what I mean

2007-11-26 Joerg Faschingbauer <joerg.faschingbauer@aon.at>

	* Fixed bug "[ 1834223 ] Missing test for duplicate
	  PROVIDE_SYMBOL"

2007-11-21 Joerg Faschingbauer <joerg.faschingbauer@aon.at>

	* confix2.py --overlayroot
	  Makes it possible to "overlay" the package with a separate tree
	  that contains the Confix2.{pkg,dir} files.
	* Largely eliminated the --use-libtool parameter, by scanning the
	  generated configure.ac file for AC_PROG_LIBTOOL. --use-libtool
	  is still necessary for the damn ConfixSetup default. Thus
	  consider "[ 1834227 ] ExplicitCSetup and use_libtool" fixed.
	* test cleanup in the outside 'tests' directory: removed 
	  tests/make and tests/plainfile

2007-10-23 Joerg Faschingbauer <joerg.faschingbauer@aon.at>

	* Fixed bug "[ 1817734 ] Relocated headers leave require objects
	  at source module"

2007-10-22 Joerg Faschingbauer <joerg.faschingbauer@aon.at>

	* removed libconfix/testutils/find.py

2007-10-21 Joerg Faschingbauer <joerg.faschingbauer@aon.at>

	* Fixed bug "[ 1654643 ] URGENCY_ERROR require need not be
	  resolved immediately"

2007-09-27 Joerg Faschingbauer <joerg.faschingbauer@aon.at>

	* merged from RB-branches/2.1 (last changed rev. 375 there)
	  * add test libconfix/core/filesys/tests/scan.py
	  * InstalledNode.short_description() was left abstract; fixed.

2007-09-05 Joerg Faschingbauer <joerg.faschingbauer@aon.at>

	* BuildInfo_CIncludePath_NativeLocal does not carry any
	  autoconfisms anymore.
